[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
chrono = "0.4.23"
futures = "0.3.26"
lazy_static = "1.4.0"
mongodb = "2.4.0"
serde = "1.0.154"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
